# interview-phrase-tagger

./: .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml
configs/: interview_topics.yaml  topics_example.yaml
scripts/: classify_data.py  load_data.py
src/iptag/: __init__.py  settings.py
src/iptag/classifier/: __init__.py  catalog.py  classifier.py  config.py  models.py  pipeline.py
src/iptag/cli/: __init__.py
src/iptag/cli/data/: __init__.py  preprocess.py
src/iptag/cli/models/: __init__.py  classify.py
src/iptag/presentation/: __init__.py  colors.py  html.py  segments.py  terminal.py
src/iptag/transcriptions/: __init__.py  models.py
src/iptag/transcriptions/loader/: __init__.py  base.py  config.py  factory.py  models.py
src/iptag/transcriptions/loader/implementations/: __init__.py  gdocs.py  txt.py
src/iptag/transcriptions/splitter/: __init__.py  text.py
src/iptag/utils/: logging.py
tests/: test_example.py
tests/classifier/: __init__.py  test_classifier.py  test_config.py  test_models.py  test_pipeline.py
tests/presentation/: __init__.py  test_presentation.py
